css/portfolio.css
.portfolio {
  width: 100%;
  margin: 0 auto;
  margin-top: 2.5rem;
  text-align: center;
  display: grid;
  justify-content: center;
  justify-items: center;
  grid-gap: 40px;
  grid-template-columns: repeat(auto-fill, minmax(200px, 0.9fr));
  grid-auto-rows: 1fr;
}

.portfolio-item {
  color: inherit;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 5px;
  box-sizing: border-box;
  padding: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  transition: box-shadow 0.5s;
}

.portfolio-item:hover {
  color: inherit;
  text-decoration: none;
  border-bottom-style: none;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
}

.portfolio-item img{
  width: 100%;
  max-width: 100%;
  margin-bottom: 0.5rem;
  flex: 1 0 auto;
}

.portfolio-item span {
  font-size: 1.1em;
  line-height: 1.1;
  /* font-family: -apple-system,  BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif; */
  font-weight: 700;
  margin-top: 3rem;
  margin-bottom: 1.5rem;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

@media screen and (max-width: 472px) {
  .portfolio {
    grid-gap: 2.5rem;
    grid-template-columns: 0.9fr;
  }
  .portfolio-item {
    color: inherit;
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
  }
  .portfolio-item img {
    max-width: 30%;
    height: 100%;
    margin: 0;
    margin-right: 2em;
  }
  .portfolio-item span {
    text-align: left;
    font-size: 4vw;
    margin: 0;
    word-wrap: anywhere;
  }
}

